Fix regression in AbstractJackson2Encoder